--- a/_data/map-settings.yml
+++ b/_data/map-settings.yml
@@ -2,9 +2,9 @@
 # MAP PAGE
 #
 # see _data/map-config.csv for field display options
-latitude: 46.727485 #to determine center of map
-longitude: -117.014185 #to determine center of map
-zoom-level: 2 # zoom level for map 
+latitude: 10.4811782471521 #to determine center of map
+longitude: -66.89175675711786 #to determine center of map
+zoom-level: 3 # zoom level for map 
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
 map-search: true # true/false, not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
