--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ menu:
 footer:
   links:
     - label: 'GitHub'
-      link: 'https://github.com/kam535/waxbuilder'
+      link: 'https://github.com/katelynautumn28/findingmestizaje'
     - label: 'Credits'
       link: '/credits'
     - label: 'Wax Wiki'
