--- a/_config.yml
+++ b/_config.yml
@@ -114,12 +114,12 @@ menu:
     link: '/map.html'
   - label: 'Analysis'
     sub:
-      - label: 'Bonaventure Lyffe of Chryste'
-        link: '/exhibits/a/'
-      - label: 'Parchment fragments'
-        link: '/exhibits/b/'
-      - label: 'Sample Exhibit Shell'
-        link: '/exhibits/c/'
+      - label: 'Introduction & Methods'
+        link: '/analysis/methods/'
+      - label: 'Results'
+        link: '/analysis/results/'
+      - label: 'Conclusions'
+        link: '/analysis/conclusions/'
   - label: 'Data'
     link: '/data/'
   - label: 'Search'
