--- a/_config.yml
+++ b/_config.yml
@@ -114,12 +114,12 @@ menu:
     link: '/map.html'
   - label: 'Analysis'
     sub:
-      - label: 'Introduction & Methods'
+      - label: 'Introduction'
+        link: '/analysis/intro/'
+      - label: 'Methods'
         link: '/analysis/methods/'
       - label: 'Results'
         link: '/analysis/results/'
-      - label: 'Conclusions'
-        link: '/analysis/conclusions/'
   - label: 'Data'
     link: '/data/'
   - label: 'Search'
